change: update event endpoint documentation
